--- a/views/index.erb
+++ b/views/index.erb
@@ -7,7 +7,7 @@
   <body>
     <h1>Pig Latinizer!</h1>
     <form method="POST">
-      
+      <p>Enter your phrase: <input type="text"></p>
     </form>
   </body>
 </html>
