automatically backed up by learn

--- a/views/index.erb
+++ b/views/index.erb
@@ -8,6 +8,7 @@
     <h1>Pig Latinizer!</h1>
     <form method="POST">
       <p>Enter your phrase: <input type="text"></p>
+      <input type="submit" id="SUBMIT">
     </form>
   </body>
 </html>
