automatically backed up by learn

--- a/models/piglatinize.erb
+++ b/models/piglatinize.erb
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    
+  <meta charset="UTF-8">
+  <title>Basketball Team</title>
   </head>
   <body><%=@user_phrase%></body>
 </html>
