automatically backed up by learn

--- a/models/piglatinize.erb
+++ b/models/piglatinize.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
   <meta charset="UTF-8">
-  <title>Basketball Team</title>
+  <title>Piglatinized!</title>
   </head>
   <body><%=@user_phrase%></body>
 </html>
