automatically backed up by learn

--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>Pig Latinizer</h1>
-    <p><%= @piglatinized %></p>
+    <p><%= @piglatinized_text %></p>
   </body>
 </html>
