--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>Pig Latinizer</h1>
-    <p><%= @piglatinized_text %></p>
+    <p><%= @piglatinizer.piglatinize(params[:user_phrase] %></p>
   </body>
 </html>
